[package]
name = "tests"
version.workspace = true
edition = "2021"
publish = false

[[test]]
name = "tinymist-e2e-tests"
path = "e2e/main.rs"

[dev-dependencies]
sync-ls = { workspace = true, features = ["lsp"] }
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tinymist-std.workspace = true
insta.workspace = true
