[package]
name = "typlite-cli"
description = "Converts a subset of typst to markdown."
categories = ["compilers"]
keywords = ["language", "typst"]
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "typlite"
path = "src/main.rs"

[dependencies]
typlite.workspace = true
clap.workspace = true
tinymist-world.workspace = true
ecow.workspace = true
