[package]
name = "cmark-writer-macros"
version = "0.8.0"
edition = "2021"
authors = ["Hong Jiarong"]
description = "Proc-macro implementations for cmark-writer"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
cmark-writer = { path = "../cmark-writer" }
ecow = "0.2.6"
