[package]
name = "cmark-writer-macros"
version = "0.9.0"
edition = "2021"
authors = ["Hong Jiarong"]
description = "Proc-macro implementations for cmark-writer"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
cmark-writer = { path = "../cmark-writer" }
ecow = "0.2.6"
